'搜索分页完成'

--- a/views/blogs/index.html
+++ b/views/blogs/index.html
@@ -8,6 +8,9 @@
             font-size: 1.2em;
             color: #F00;
         }
+        .page_active {
+            background-color: #F00;
+        }
     </style>
 </head>
 <body>
@@ -63,5 +66,6 @@
         </tr>
         <?php endforeach; ?>
     </table>
+    <?=$pageBtn?>
 </body>
 </html>
